--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
                     <p>GPA - 9.3/10</p>
                 </sidebar-category>
                 <sidebar-category name="Achievements">
-
+                    <p>Received letter of honor from mayor Jim Watson and featured in Barheavon newspaper for oustanding student achievement</p>
+                    <p>Honor Roll Student</p>
+                    <p>Graduated with bilingual deploma</p>
                 </sidebar-category>
                 <sidebar-category name="Interests">
                     <p>Data Structures</p>
@@ -45,12 +47,13 @@
                         <li>Managing directories including version control and administrator privileges</li>
                     </category-item>
                     <category-item title="Software Designer Intern" subtitle="Ribbon Communications">
-                        <li>Worked in an Agile Environment on the Web team with other interns and Seniors</li>
+                        <li>Worked in an Agile Environment on Ribbon Protect</li>
                         <li>Used JIRA to collaborate with developers on stories</li>
-                        <li>Collaborated with other interns and Employees on design</li>
+                        <li>Worked as a Full-Stack developper</li>
                         <li>Used Java to create APIs and scaled on Kubernetes and Docker</li>
-                        <li>Used Angular 2 for Front-End development</li>
-                        <li>Test Automation using Python</li>
+                        <li>Used Angular 2 for Front-End development with libraries such as PrimeNg for design</li>
+                        <li>Test Automation using Python, Jenkins and RedwoodHQ</li>
+                        <li>Learned how to host KVMS and deploy stacks on OpenStack</li>
                     </category-item>
                 </category>
                 <category name="Projects">
