--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <category name="Skills">
                     <category-item title="Web Development">
                         <li><strong>Frameworks</strong> React, Redux, Reselect, Redankmeme, Revenant, Angular, Express</li>
-                        <li><strong>Frameworks</strong> Bootstrap and Material Design</li>
+                        <li><strong>Designing</strong> Bootstrap, Material Design, PrimeNg, UI Grid</li>
 
                     </category-item>
                     <category-item title="Technologies">
