--- a/index.html
+++ b/index.html
@@ -41,12 +41,7 @@
             </resume-column>
             <resume-column flex="80">
                 <category name="Professional Experience">
-                    <category-item title="Technical Analyst" subtitle="Shared Services Canada">
-                        <li>Managed and organized services in the Service Inventory of Shared Services, Government of Canada</li>
-                        <li>Analysis of services used in the government of Canada and their level of viability </li>
-                        <li>Managing directories including version control and administrator privileges</li>
-                    </category-item>
-                    <category-item title="Software Designer Intern" subtitle="Ribbon Communications">
+                    <category-item title="Software Designer Intern" subtitle="Ribbon Communications (2018 Summer)">
                         <li>Worked in an Agile Environment on Ribbon Protect</li>
                         <li>Used JIRA to collaborate with developers on stories</li>
                         <li>Worked as a Full-Stack developper</li>
@@ -54,6 +49,11 @@
                         <li>Used Angular 2 for Front-End development with libraries such as PrimeNg for design</li>
                         <li>Test Automation using Python, Jenkins and RedwoodHQ</li>
                         <li>Learned how to host KVMS and deploy stacks on OpenStack</li>
+                    </category-item>
+                    <category-item title="Technical Analyst" subtitle="Shared Services Canada (2017 Summer)">
+                        <li>Managed and organized services in the Service Inventory of Shared Services, Government of Canada</li>
+                        <li>Analysis of services used in the government of Canada and their level of viability </li>
+                        <li>Managing directories including version control and administrator privileges</li>
                     </category-item>
                 </category>
                 <category name="Projects">
