--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
             <resume-column flex="80">
                 <category name="Professional Experience">
                     <category-item title="Software Designer Intern" subtitle="Ribbon Communications (2018 Summer)">
-                        <li>Worked in an Agile Environment on Ribbon Protect</li>
+                        <li>Worked in an Agile Environment on Ribbon Protect as a Full-Stack developper</li>
                         <li>Used JIRA to collaborate with developers on stories</li>
-                        <li>Worked as a Full-Stack developper</li>
                         <li>Used Java to create APIs and scaled on Kubernetes and Docker</li>
                         <li>Used Angular 2 for Front-End development with libraries such as PrimeNg for design</li>
                         <li>Test Automation using Python, Jenkins and RedwoodHQ</li>
