--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <sidebar-category name="Achievements">
                     <p>Received letter of honor from mayor Jim Watson and featured in Barheavon newspaper for oustanding student achievement</p>
                     <p>Honor Roll Student</p>
-                    <p>Graduated with bilingual deploma</p>
+                    <p>Graduated with bilingual diploma</p>
                 </sidebar-category>
                 <sidebar-category name="Interests">
                     <p>Data Structures</p>
