--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </category>
                 <category name="Skills">
                     <category-item title="Web Development">
-                        <li><strong>Frameworks</strong> React, Redux, Reselect, Redankmeme, Revenant, Angular, Express</li>
+                        <li><strong>Frameworks</strong> React, Redux, Angular, Express</li>
                         <li><strong>Designing</strong> Bootstrap, Material Design, PrimeNg, UI Grid</li>
 
                     </category-item>
