--- a/index.html
+++ b/index.html
@@ -26,46 +26,48 @@
                     <p>GPA - 3.9/4</p>
                 </sidebar-category>
                 <sidebar-category name="Achievements">
-                    <p>Received letter of honor from mayor Jim Watson and featured in Barheavon newspaper for oustanding student achievement</p>
-                    <p>Honor Roll Student</p>
-                    <p>Graduated with bilingual diploma</p>
+                    <p>Received letter of honor from mayor Jim Watson and featured in Barrheaven newspaper for oustanding student achievement</p>
+                    <p>Honor Roll student</p>
+                    <p>uOttawa Dean's List appearace</p>
+                    <p>Graduated with bilingual diploma (English-French)</p>
+                    <p>Brown belt Jiu-Jitsu</p>
                 </sidebar-category>
                 <sidebar-category name="Interests">
                     <p>Data Structures</p>
                     <p>Algorithms</p>
-                    <p>Programmings Langauges</p>
+                    <p>Programming Langauges</p>
+                    <p>Web Development</p>
                     <p>Operating Systems</p>
                     <p>Distributed Systems</p>
-                    <p>Discrete Math</p>
                 </sidebar-category>
             </resume-column>
             <resume-column flex="80">
                 <category name="Professional Experience">
-                    <category-item title="Software Designer Intern" subtitle="Ribbon Communications (2018 Summer)">
+                    <category-item title="Full-Stack Developper (Intern)" subtitle="Ribbon Communications (May - September 2018)">
                         <li>Worked in an Agile Environment on Ribbon Protect as a Full-Stack developper</li>
                         <li>Used JIRA to collaborate with developers on stories</li>
                         <li>Used Java to create APIs and scaled on Kubernetes and Docker</li>
                         <li>Used Angular 2 for Front-End development with libraries such as PrimeNg for design</li>
-                        <li>Test Automation using Python, Jenkins and RedwoodHQ</li>
-                        <li>Learned how to host KVMS and deploy stacks on OpenStack</li>
+                        <li>Test automation and scripting using Python, Jenkins and RedwoodHQ</li>
+                        <li>Learned how to host KVMS and deploy stacks on OpenStack using Python API</li>
                     </category-item>
-                    <category-item title="Technical Analyst" subtitle="Shared Services Canada (2017 Summer)">
+                    <category-item title="Technical Analyst" subtitle="Shared Services Canada (May - December 2017)">
                         <li>Managed and organized services in the Service Inventory of Shared Services, Government of Canada</li>
-                        <li>Analysis of services used in the government of Canada and their level of viability </li>
+                        <li>Analysis of IT services used in the government of Canada and their level of viability </li>
                         <li>Managing directories including version control and administrator privileges</li>
                     </category-item>
                 </category>
-                <category name="Projects">
-                    <category-item title="FloodIt" subtitle="Java MVC Game">
-                        <li>Created a strategy game where you have to fill all the bubble with the same color</li>
-                        <li>Written with Java MVC Framework making use of Java Swing and JavaFX libraries</li>
+                <category name="Projects" subtitle="Visit my GitHub for all my projects!">
+                    <category-item title="Wi-Fi Jammer" subtitle="Embedded System">
+                        <li>Created a Wi-Fi deauther to disable Wi-Fi surfing</li>
+                        <li>Using Python and C, I was able to embed the ESP8266 chip with software to jam Wi-Fi signals</li>
                     </category-item>
                     <category-item title="Duty Helper" subtitle="Android Organizing Tool">
                         <li>App that allows users to create groups, add members and materials, and assign tasks to others</li>
                         <li>Using Android Studio, our team was able to create this app while making use of Firebase</li>
                     </category-item>
                     <category-item title="CryptoCrave" subtitle="https://crypto-crave.herokuapp.com/">
-                        <li>A blog for discussing ICOs, BitCoin and Blockchain Technology</li>
+                        <li>A blog for discussing ICOs, BitCoin and Blockchain technology</li>
                         <li>With the use of Ruby on Rails 5, I was able to implement a blog</li>
                     </category-item>
                 </category>
@@ -77,9 +79,9 @@
                     </category-item>
                     <category-item title="Technologies">
                         <li><strong>Experienced With</strong> Web &amp; Hybrid App Development \ Functional Programming \ Fullstack Development</li>
-                        <li><strong>Programming</strong> Javascript \ TypeScript \ Python \ Ruby \ HTML \ C \ C++ \ Java</li>
+                        <li><strong>Programming</strong> Javascript \ TypeScript \ Python \ Ruby \ HTML \ CSS \ C \ C++ \ Java</li>
                         <li><strong>Databases</strong>  MongoDB \ MySQL \ PostgreSQL \ Redis</li>
-                        <li><strong>Platform</strong>  Kubernetes \ Docker</li>
+                        <li><strong>Platform</strong>  Kubernetes \ Docker \ Jenkins</li>
 
                     </category-item>
                 </category>
