--- a/index.html
+++ b/index.html
@@ -75,16 +75,18 @@
                     <category-item title="Web Development">
                         <li><strong>Frameworks</strong> React, Redux, Angular, Express</li>
                         <li><strong>Designing</strong> Bootstrap, Material Design, PrimeNg, UI Grid</li>
-
                     </category-item>
                     <category-item title="Technologies">
                         <li><strong>Experienced With</strong> Web &amp; Hybrid App Development \ Functional Programming \ Fullstack Development</li>
                         <li><strong>Programming</strong> Javascript \ TypeScript \ Python \ Ruby \ HTML \ CSS \ C \ C++ \ Java</li>
                         <li><strong>Databases</strong>  MongoDB \ MySQL \ PostgreSQL \ Redis</li>
                         <li><strong>Platform</strong>  Kubernetes \ Docker \ Jenkins</li>
-
                     </category-item>
+
                 </category>
+                <category>
+                </category>
+
             </resume-column>
         </resume-body>
     </resume>
