--- a/index.html
+++ b/index.html
@@ -39,22 +39,25 @@
                     <p>Web Development</p>
                     <p>Operating Systems</p>
                     <p>Distributed Systems</p>
+                    <p>Adobe Premiere</p>
+                    <p>Adobe Photoshop</p>
+                    <p>Cinema 4D</p>
                 </sidebar-category>
             </resume-column>
             <resume-column flex="80">
                 <category name="Professional Experience">
-                    <category-item title="Full-Stack Developper (Intern)" subtitle="Ribbon Communications (May - September 2018)">
+                    <category-item title="Full-Stack Developper (CO-OP)" subtitle="Ribbon Communications (May - September 2018)">
                         <li>Worked in an Agile Environment on Ribbon Protect as a Full-Stack developper</li>
                         <li>Used JIRA to collaborate with developers on stories</li>
-                        <li>Used Java to create APIs and scaled on Kubernetes and Docker</li>
-                        <li>Used Angular 2 for Front-End development with libraries such as PrimeNg for design</li>
-                        <li>Test automation and scripting using Python, Jenkins and RedwoodHQ</li>
+                        <li>Created APIs with Java and scaled on Kubernetes and Docker</li>
+                        <li>Integrated Angular 2 for Front-End development with libraries such as PrimeNg for design</li>
+                        <li>Implemented tests (test automation) and developed scripts using Python, Jenkins and RedwoodHQ</li>
                         <li>Learned how to host KVMS and deploy stacks on OpenStack using Python API</li>
                     </category-item>
-                    <category-item title="Technical Analyst" subtitle="Shared Services Canada (May - December 2017)">
-                        <li>Managed and organized services in the Service Inventory of Shared Services, Government of Canada</li>
-                        <li>Analysis of IT services used in the government of Canada and their level of viability </li>
-                        <li>Managing directories including version control and administrator privileges</li>
+                    <category-item title="Technical Analyst (Intern)" subtitle="Shared Services Canada (May - December 2017)">
+                        <li>Organized services in the Service Inventory of Shared Services, Government of Canada</li>
+                        <li>Analyzed IT services used in the government of Canada and their level of viability </li>
+                        <li>Managed directories and implemented version control on SSC servers</li>
                     </category-item>
                 </category>
                 <category name="Projects" subtitle="Visit my GitHub for all my projects!">
@@ -62,11 +65,12 @@
                         <li>Created a Wi-Fi deauther to disable Wi-Fi surfing</li>
                         <li>Using Python and C, I was able to embed the ESP8266 chip with software to jam Wi-Fi signals</li>
                     </category-item>
-                    <category-item title="Duty Helper" subtitle="Android Organizing Tool">
-                        <li>App that allows users to create groups, add members and materials, and assign tasks to others</li>
+                    <category-item title="Duty Helper" subtitle="Android Application">
+                        <li>An android application that allows users to create groups, add members and materials, and assign tasks to others</li>
                         <li>Using Android Studio, our team was able to create this app while making use of Firebase</li>
                     </category-item>
-                    <category-item title="CryptoCrave" subtitle="https://crypto-crave.herokuapp.com/">
+                    <category-item title="CryptoCrave" subtitle="Ruby on Rails">
+                        <li>https://crypto-crave.herokuapp.com/</li>
                         <li>A blog for discussing ICOs, BitCoin and Blockchain technology</li>
                         <li>With the use of Ruby on Rails 5, I was able to implement a blog</li>
                     </category-item>
