--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                     <p>Web Development</p>
                     <p>Operating Systems</p>
                     <p>Distributed Systems</p>
-                    <p>Adobe Premiere</p>
                     <p>Adobe Photoshop</p>
-                    <p>Cinema 4D</p>
                 </sidebar-category>
             </resume-column>
             <resume-column flex="80">
@@ -69,8 +67,7 @@
                         <li>An android application that allows users to create groups, add members and materials, and assign tasks to others</li>
                         <li>Using Android Studio, our team was able to create this app while making use of Firebase</li>
                     </category-item>
-                    <category-item title="CryptoCrave" subtitle="Ruby on Rails">
-                        <li>https://crypto-crave.herokuapp.com/</li>
+                    <category-item title="CryptoCrave" subtitle="https://crypto-crave.herokuapp.com/">
                         <li>A blog for discussing ICOs, BitCoin and Blockchain technology</li>
                         <li>With the use of Ruby on Rails 5, I was able to implement a blog</li>
                     </category-item>
