--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </category-item>
                     <category-item title="Duty Helper" subtitle="Android Application">
                         <li>An android application that allows users to create groups, add members and materials, and assign tasks to others</li>
-                        <li>Using Android Studio, our team was able to create this app while making use of Firebase</li>
+                        <li>Using Android Studio and Firebase, CRUD features were implemented</li>
                     </category-item>
                     <category-item title="CryptoCrave" subtitle="https://crypto-crave.herokuapp.com/">
                         <li>A blog for discussing ICOs, BitCoin and Blockchain technology</li>
