--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <li>Created a Wi-Fi deauther to disable Wi-Fi surfing</li>
                         <li>Using Python and C, I was able to embed the ESP8266 chip with software to jam Wi-Fi signals</li>
                     </category-item>
-                    <category-item title="Duty Helper" subtitle="Android Application">
+                    <category-item title="Duty Helper" subtitle="https://github.com/pfarah65/DutyHelper">
                         <li>An android application that allows users to create groups, add members and materials, and assign tasks to others</li>
                         <li>Using Android Studio and Firebase, CRUD features were implemented</li>
                     </category-item>
