--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                     </category-item>
                 </category>
                 <category name="Projects" subtitle="Visit my GitHub for all my projects!">
+                     <category-item title="Recipe Tracker" subtitle="https://pfarah65.github.io/shopping">
+                        <li>A multiplatform application that helps create, manage and edit recipes</li>
+                        <li>Using Angular 7, Bootstrap and Firebase to accomplish a dynamic web application</li>
+                    </category-item>
                     <category-item title="Duty Helper" subtitle="https://github.com/pfarah65/DutyHelper">
                         <li>An android application that allows users to create groups, add members and materials, and assign tasks to others</li>
                         <li>Using Android Studio and Firebase, CRUD features were implemented</li>
