--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
-<!DOCTYPE html><html><head><meta charset="UTF-8">
-<title>Resume</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Raleway:500,200,700" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
+<!DOCTYPE html>
+<html>
 
-<link href="https://unpkg.com/material-resume@1.0.1/resume.min.css" rel="stylesheet">
-<script src="https://unpkg.com/material-resume@1.0.1/resume.min.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <title>Resume</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500,200,700" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc2/angular-material.min.js"></script>
 
-</head><body ng-app="Resume" ng-cloak="">
+    <link href="https://unpkg.com/material-resume@1.0.1/resume.min.css" rel="stylesheet">
+    <script src="https://unpkg.com/material-resume@1.0.1/resume.min.js"></script>
+
+</head>
+
+<body ng-app="Resume" ng-cloak="">
     <resume>
-        <resume-heading first-name="Peter" last-name="Farah" linkedin="peter-farah" github="pfarah65" email="pfara039@uottawa.ca" phone="613-700-8520">
+        <resume-heading first-name="Peter" last-name="Farah" linkedin="peter-farah" github="pfarah65" email="pfara039@uottawa.ca"
+            phone="613-700-8520">
         </resume-heading>
         <resume-body>
             <resume-column flex="20">
@@ -26,7 +34,8 @@
                     <p>GPA - 3.9/4</p>
                 </sidebar-category>
                 <sidebar-category name="Achievements">
-                    <p>Received letter of honor from mayor Jim Watson and featured in Barrheaven newspaper for oustanding student achievement</p>
+                    <p>Received letter of honor from mayor Jim Watson and featured in Barrheaven newspaper for
+                        oustanding student achievement</p>
                     <p>Honor Roll student</p>
                     <p>uOttawa Dean's List appearace</p>
                     <p>Graduated with bilingual diploma (English-French)</p>
@@ -39,7 +48,11 @@
                     <p>Web Development</p>
                     <p>Operating Systems</p>
                     <p>Distributed Systems</p>
+                    <p>Big Data Analytics</p>
                     <p>Adobe Photoshop</p>
+                    <p>Adobe Premiere</p>
+                    <p>Android ROMs</p>
+
                 </sidebar-category>
             </resume-column>
             <resume-column flex="80">
@@ -49,7 +62,8 @@
                         <li>Used JIRA to collaborate with developers on stories</li>
                         <li>Created APIs with Java and scaled on Kubernetes and Docker</li>
                         <li>Integrated Angular 2 for Front-End development with libraries such as PrimeNg for design</li>
-                        <li>Implemented tests (test automation) and developed scripts using Python, Jenkins and RedwoodHQ</li>
+                        <li>Implemented tests (test automation) and developed scripts using Python, Jenkins and
+                            RedwoodHQ</li>
                         <li>Learned how to host KVMS and deploy stacks on OpenStack using Python API</li>
                     </category-item>
                     <category-item title="Technical Analyst (Intern)" subtitle="Shared Services Canada (May - December 2017)">
@@ -59,12 +73,13 @@
                     </category-item>
                 </category>
                 <category name="Projects" subtitle="Visit my GitHub for all my projects!">
-                     <category-item title="Recipe Tracker" subtitle="https://pfarah65.github.io/shopping">
+                    <category-item title="Recipe Tracker" subtitle="https://pfarah65.github.io/shopping">
                         <li>A multiplatform application that helps create, manage and edit recipes</li>
                         <li>Using Angular 7, Bootstrap and Firebase to accomplish a dynamic web application</li>
                     </category-item>
                     <category-item title="Duty Helper" subtitle="https://github.com/pfarah65/DutyHelper">
-                        <li>An android application that allows users to create groups, add members and materials, and assign tasks to others</li>
+                        <li>An android application that allows users to create groups, add members and materials, and
+                            assign tasks to others</li>
                         <li>Using Android Studio and Firebase, CRUD features were implemented</li>
                     </category-item>
                     <category-item title="CryptoCrave" subtitle="https://crypto-crave.herokuapp.com/">
@@ -82,10 +97,12 @@
                         <li><strong>Designing</strong> Bootstrap, Material Design, PrimeNg, UI Grid</li>
                     </category-item>
                     <category-item title="Technologies">
-                        <li><strong>Experienced With</strong> Web &amp; Hybrid App Development \ Functional Programming \ Fullstack Development</li>
-                        <li><strong>Programming</strong> Javascript \ TypeScript \ Python \ Ruby \ HTML \ CSS \ C \ C++ \ Java</li>
-                        <li><strong>Databases</strong>  MongoDB \ MySQL \ PostgreSQL \ Redis</li>
-                        <li><strong>Platform</strong>  Kubernetes \ Docker \ Jenkins</li>
+                        <li><strong>Experienced With</strong> Web &amp; Hybrid App Development \ Functional Programming
+                            \ Fullstack Development</li>
+                        <li><strong>Programming</strong> Javascript \ TypeScript \ Python \ Ruby \ HTML \ CSS \ C \ C++
+                            \ Java</li>
+                        <li><strong>Databases</strong> MongoDB \ MySQL \ PostgreSQL \ Redis</li>
+                        <li><strong>Platform</strong> Kubernetes \ Docker \ Jenkins</li>
                     </category-item>
 
                 </category>
@@ -97,4 +114,6 @@
     </resume>
 
 
-</body></html>
+</body>
+
+</html>
